--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Oxygen");
 @import url("https://fonts.googleapis.com/css?family=Oswald");
 @import url("https://fonts.googleapis.com/css?family=Quicksand");
-
+@import url("https://fonts.googleapis.com/css?family=Poppins");
 * {
   margin: 0;
   padding: 0;
@@ -129,29 +129,35 @@
   border-bottom: 0.5px solid rgb(209, 204, 204);
 }
 #container {
-  margin-top: 20px;
+  margin-top: 10px;
   margin-bottom: 20px;
   display: flex;
   justify-content: center;
   align-items: flex-start;
 }
 #container > .shop-categories {
-  padding: 10px 10px;
   text-align: center;
   font-family: Oswald;
-  background-color: whitesmoke;
+  width: 100%;
+  padding: 5px 5px;
 }
 #container > .shop-categories > h4 {
-  padding: 10px 10px;
+  padding: 10px 20px;
   font-size: 14px;
   color: whitesmoke;
   font-weight: 400;
+  letter-spacing: 1.5px;
   text-transform: uppercase;
-  background-color: black;
+  background-color: rgb(41, 34, 34);
+  text-align: left;
 }
 #container > .shop-categories > h4 > i {
   padding: 2px 8px;
-  text-align: center;
+  text-align: left;
+}
+#container > .shop-categories > ul {
+  background-color: white;
+  margin-top: -10px;
 }
 #container > .shop-categories > ul > li {
   list-style: none;
@@ -161,23 +167,16 @@
   font-family: Quicksand;
   padding: 10px 10px;
   text-align: left;
-  margin: 0px 0px;
+  border: 0.5px solid rgb(209, 204, 204);
 }
 #container > .shop-categories > ul > li > a {
   color: rgb(49, 49, 49);
-  margin: 5px 30px;
-  padding: 20px 10px;
   text-align: left;
 }
 #container > .shop-categories > ul > li > a:hover,
 :active,
 :focus {
   text-decoration: none;
-}
-#container > .shop-categories > ul > li > i {
-  padding: 5px 5px;
-  margin: 2px 20px;
-  text-align: center;
 }
 #container > .shop-categories > ul > li > .slow {
   display: none;
@@ -195,8 +194,7 @@
   color: rgb(49, 49, 49);
 }
 #container > .shop-categories > ul > li > i {
-  margin: 5px 0px;
-  text-align: end;
+  margin-left: 15rem;
 }
 #container > .shop-categories > ul > li > .slow > .Mens {
   display: none;
@@ -216,10 +214,505 @@
 #container > .shop-categories > ul > li > .slow > p > a:hover {
   text-decoration: none;
 }
+#container > .shop-categories > .Service {
+  padding: 20px 0px;
+  margin-top: 20px;
+  text-align: left;
+  display: block;
+}
+#container > .shop-categories > .Service > .Service-title > h4 {
+  color: rgb(49, 49, 49);
+  padding: 10px 0px;
+  letter-spacing: 1.5px;
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: 400;
+}
+#container > .shop-categories > .Service > .Service-title > i {
+  padding-left: 4px;
+}
+#container > .shop-categories > .Service > .Service-msg {
+  font-family: Poppins;
+  font-size: 13px;
+  color: rgb(117, 117, 117);
+  line-height: 23px;
+  font-weight: 400;
+}
+#container > .shop-categories > .policy {
+  padding: 20px 0px;
+  text-align: left;
+  display: block;
+}
+#container > .shop-categories > .policy > .policy-title > h4 {
+  color: rgb(49, 49, 49);
+  padding-top: 10px;
+  padding-bottom: 10px;
+  letter-spacing: 1.5px;
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: 400;
+}
+#container > .shop-categories > .policy > .policy-title > i {
+  padding-left: 4px;
+}
+#container > .shop-categories > .policy > .policy-msg {
+  font-family: Poppins;
+  font-size: 13px;
+  color: rgb(117, 117, 117);
+  line-height: 23px;
+  font-weight: 400;
+}
 #container > .featured-products {
-  padding: 10px 10px;
+  padding: 10px 0px 10px 20px;
+  width: 100%;
+}
+#container > .featured-products > .product-items {
+  display: grid;
+  grid-gap: 1rem;
+  padding: 10px 0px;
+}
+#container > .card {
+  padding: 2px 2px;
+}
+#container > .featured-products > .heading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: Oswald;
+}
+#container > .featured-products > .heading > h4 {
+  font-size: 20px;
+  margin-right: 30px;
+  padding: 0px 10px;
+  width: 50%;
+  font-weight: 400;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+}
+#container > .featured-products > .heading > #HR {
+  border-bottom: 0.5px solid rgb(209, 204, 204);
+  width: 100%;
+}
+#container > .featured-products > .product-items > .card > p {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: 8px 5px;
+  padding: 8px 8px;
+  font-size: 15px;
+  font-family: Poppins;
+}
+#container > .featured-products > .product-items > .card > p > a {
+  color: rgb(49, 49, 49);
+  margin: 5px 5px;
+}
+#container > .featured-products > .product-items > .card > p > #price {
+  padding: 5px 10px;
+  font-family: oswald;
+  font-size: 18px;
+}
+#container > .featured-products > .product-items > .card > p > .rating {
+  color: rgb(209, 204, 204);
+}
+#container > .featured-products > .product-items > .card > p > a:hover {
+  text-decoration: none;
+}
+#container > .featured-products > .product-items > .card > p > button {
+  text-transform: uppercase;
+  font-family: Oswald;
+}
+#container > .featured-products > .product-items > .card > .group-btn {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  font-family: Oswald;
+}
+#container
+  > .featured-products
+  > .product-items
+  > .card
+  > .group-btn
+  > #cart01 {
+  display: none;
+  padding: 7px 5px;
+  border: none;
+  border-radius: 0px;
+  margin-right: 5px;
+  margin-left: 5px;
+  width: 40px;
+}
+#container
+  > .featured-products
+  > .product-items
+  > .card
+  > .group-btn
+  > #cart02 {
+  display: none;
+  padding: 7px 5px;
+  border: none;
+  border-radius: 0px;
+  margin-right: 5px;
+  margin-left: 5px;
+  width: 40px;
+}
+#container
+  > .featured-products
+  > .product-items
+  > .card
+  > .group-btn
+  > #cart03 {
+  display: none;
+  padding: 7px 5px;
+  border: none;
+  border-radius: 0px;
+  margin-right: 5px;
+  margin-left: 5px;
+  width: 40px;
+}
+#container
+  > .featured-products
+  > .product-items
+  > .card
+  > .group-btn
+  > #cart04 {
+  display: none;
+  padding: 7px 5px;
+  border: none;
+  border-radius: 0px;
+  margin-right: 5px;
+  margin-left: 5px;
+  width: 40px;
+}
+#container
+  > .featured-products
+  > .product-items
+  > .card
+  > .group-btn
+  > #cart05 {
+  display: none;
+  padding: 7px 5px;
+  border: none;
+  border-radius: 0px;
+  margin-right: 5px;
+  margin-left: 5px;
+  width: 40px;
+}
+#container
+  > .featured-products
+  > .product-items
+  > .card
+  > .group-btn
+  > #cart06 {
+  display: none;
+  padding: 7px 5px;
+  border: none;
+  border-radius: 0px;
+  margin-right: 5px;
+  margin-left: 5px;
+  width: 40px;
+}
+#container
+  > .featured-products
+  > .product-items
+  > .card
+  > .group-btn
+  > #cart07 {
+  display: none;
+  padding: 7px 5px;
+  border: none;
+  border-radius: 0px;
+  margin-right: 5px;
+  margin-left: 5px;
+  width: 40px;
+}
+#container
+  > .featured-products
+  > .product-items
+  > .card
+  > .group-btn
+  > #cart08 {
+  display: none;
+  padding: 7px 5px;
+  border: none;
+  border-radius: 0px;
+  margin-right: 5px;
+  margin-left: 5px;
+  width: 40px;
+}
+#container > .featured-products > .product-items > .card > .group-btn > .btn {
+  text-transform: uppercase;
+  border-radius: 0px;
+}
+#container > .featured-products > .product-items > .card > .overlay {
+  position: absolute;
+  bottom: auto;
+  background: rgb(0, 0, 0);
+  background: rgba(0, 0, 0, 0.5);
+  color: #f1f1f1;
+  width: fit-content;
+  transition: 0.5s ease;
+  width: 200px;
+  opacity: 0;
+  color: white;
+  padding: 10px 10xp;
+  font-size: 18px;
+  text-transform: uppercase;
+  text-align: center;
+  font-family: Oswald;
+}
+#container > .featured-products > .product-items > .card:hover .overlay {
+  opacity: 1;
+}
+#container > .featured-products > .product-items > #item-1:hover > img {
+  box-shadow: 0px 0px 5px gray;
+}
+#container > .featured-products > .product-items > .card > .overlay-02 {
+  position: absolute;
+  bottom: auto;
+  background: rgb(0, 0, 0);
+  background: rgba(0, 0, 0, 0.5);
+  color: #f1f1f1;
+  width: fit-content;
+  transition: 0.5s ease;
+  width: 200px;
+  opacity: 0;
+  color: white;
+  padding: 10px 10xp;
+  font-size: 18px;
+  text-transform: uppercase;
+  text-align: center;
+  font-family: Oswald;
+}
+#container > .featured-products > .product-items > .card:hover > .overlay-02 {
+  opacity: 1;
+}
+#container > .featured-products > .product-items > #item-2:hover > img {
+  box-shadow: 0px 0px 5px gray;
+}
+#container > .featured-products > .product-items > .card > .overlay-03 {
+  position: absolute;
+  bottom: auto;
+  background: rgb(0, 0, 0);
+  background: rgba(0, 0, 0, 0.5);
+  color: #f1f1f1;
+  width: fit-content;
+  transition: 0.5s ease;
+  width: 200px;
+  opacity: 0;
+  color: white;
+  padding: 10px 10xp;
+  font-size: 18px;
+  text-transform: uppercase;
+  text-align: center;
+  font-family: Oswald;
+}
+#container > .featured-products > .product-items > .card:hover .overlay-03 {
+  opacity: 1;
+}
+#container > .featured-products > .product-items > #item-3:hover > img {
+  box-shadow: 0px 0px 5px gray;
+}
+#container > .featured-products > .product-items > .card > .overlay-04 {
+  position: absolute;
+  bottom: auto;
+  background: rgb(0, 0, 0);
+  background: rgba(0, 0, 0, 0.5);
+  color: #f1f1f1;
+  width: fit-content;
+  transition: 0.5s ease;
+  width: 200px;
+  opacity: 0;
+  color: white;
+  padding: 10px 10xp;
+  font-size: 18px;
+  text-transform: uppercase;
+  text-align: center;
+  font-family: Oswald;
+}
+#container > .featured-products > .product-items > .card:hover .overlay-04 {
+  opacity: 1;
+}
+#container > .featured-products > .product-items > #item-4:hover > img {
+  box-shadow: 0px 0px 5px gray;
+}
+#container > .featured-products > .product-items > .card > .overlay-05 {
+  position: absolute;
+  bottom: auto;
+  background: rgb(0, 0, 0);
+  background: rgba(0, 0, 0, 0.5);
+  color: #f1f1f1;
+  width: fit-content;
+  transition: 0.5s ease;
+  width: 200px;
+  opacity: 0;
+  color: white;
+  padding: 10px 10xp;
+  font-size: 18px;
+  text-transform: uppercase;
+  text-align: center;
+  font-family: Oswald;
+}
+#container > .featured-products > .product-items > .card:hover .overlay-05 {
+  opacity: 1;
+}
+#container > .featured-products > .product-items > #item-5:hover > img {
+  box-shadow: 0px 0px 5px gray;
+}
+#container > .featured-products > .product-items > .card > .overlay-06 {
+  position: absolute;
+  bottom: auto;
+  background: rgb(0, 0, 0);
+  background: rgba(0, 0, 0, 0.5);
+  color: #f1f1f1;
+  width: fit-content;
+  transition: 0.5s ease;
+  width: 200px;
+  opacity: 0;
+  color: white;
+  padding: 10px 10xp;
+  font-size: 18px;
+  text-transform: uppercase;
+  text-align: center;
+  font-family: Oswald;
+}
+#container > .featured-products > .product-items > .card:hover .overlay-06 {
+  opacity: 1;
+}
+#container > .featured-products > .product-items > #item-6:hover > img {
+  box-shadow: 0px 0px 5px gray;
+}
+#container > .featured-products > .product-items > .card > .overlay-07 {
+  position: absolute;
+  bottom: auto;
+  background: rgb(0, 0, 0);
+  background: rgba(0, 0, 0, 0.5);
+  color: #f1f1f1;
+  width: fit-content;
+  transition: 0.5s ease;
+  width: 200px;
+  opacity: 0;
+  color: white;
+  padding: 10px 10xp;
+  font-size: 18px;
+  text-transform: uppercase;
+  text-align: center;
+  font-family: Oswald;
+}
+#container > .featured-products > .product-items > .card:hover .overlay-07 {
+  opacity: 1;
+}
+#container > .featured-products > .product-items > #item-7:hover > img {
+  box-shadow: 0px 0px 5px gray;
+}
+#container
+  > .featured-products
+  > .product-items
+  > .card
+  > .imgOverlay
+  > .overlay-08 {
+  position: absolute;
+  bottom: auto;
+  background: rgb(0, 0, 0);
+  background: rgba(0, 0, 0, 0.5);
+  color: #f1f1f1;
+  width: fit-content;
+  transition: 0.5s ease;
+  width: 200px;
+  opacity: 0;
+  color: white;
+  padding: 10px 10xp;
+  font-size: 18px;
+  text-transform: uppercase;
+  text-align: center;
+  font-family: Oswald;
+}
+#container
+  > .featured-products
+  > .product-items
+  > .card:hover
+  > .imgOverlay
+  > .overlay-08 {
+  opacity: 1;
+}
+#container > .featured-products > .product-items > #item-8:hover > img {
+  box-shadow: 0px 0px 5px gray;
 }
 
+#container
+  > .featured-products
+  > .product-items
+  > #item-1:hover
+  > .group-btn
+  > .btn {
+  background-color: rgb(49, 49, 49);
+  color: whitesmoke;
+}
+#container
+  > .featured-products
+  > .product-items
+  > #item-2:hover
+  > .group-btn
+  > .btn {
+  background-color: rgb(49, 49, 49);
+  color: whitesmoke;
+}
+#container
+  > .featured-products
+  > .product-items
+  > #item-3:hover
+  > .group-btn
+  > .btn {
+  background-color: rgb(49, 49, 49);
+  color: whitesmoke;
+}
+#container
+  > .featured-products
+  > .product-items
+  > #item-4:hover
+  > .group-btn
+  > .btn {
+  background-color: rgb(49, 49, 49);
+  color: whitesmoke;
+}
+#container
+  > .featured-products
+  > .product-items
+  > #item-5:hover
+  > .group-btn
+  > .btn {
+  background-color: rgb(49, 49, 49);
+  color: whitesmoke;
+}
+#container
+  > .featured-products
+  > .product-items
+  > #item-6:hover
+  > .group-btn
+  > .btn {
+  background-color: rgb(49, 49, 49);
+  color: whitesmoke;
+}
+#container
+  > .featured-products
+  > .product-items
+  > #item-7:hover
+  > .group-btn
+  > .btn {
+  background-color: rgb(49, 49, 49);
+  color: whitesmoke;
+}
+#container
+  > .featured-products
+  > .product-items
+  > #item-8:hover
+  > .group-btn
+  > .btn {
+  background-color: rgb(49, 49, 49);
+  color: whitesmoke;
+}
 @media screen and (orientation: portrait) {
   .home > .container > .OurService {
     display: flex;
@@ -235,5 +728,19 @@
   }
   .home > .container > .OurService > .Support {
     padding: 10px 10px;
+  }
+  #container {
+    display: flex;
+    flex-direction: column;
+  }
+  #container > .featured-products > .product-items {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+
+@media screen and (orientation: landscape) {
+  #container > .featured-products > .product-items {
+    grid-template-columns: repeat(4, 1fr);
   }
 }
