--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -713,6 +713,33 @@
   background-color: rgb(49, 49, 49);
   color: whitesmoke;
 }
+.home > .Brands {
+  padding: 0;
+}
+.home > .Brands > .heading {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  font-family: Oswald;
+}
+.home > .Brands > .heading > h4 {
+  width: fit-content;
+  height: fit-content;
+  text-transform: uppercase;
+  font-size: 20px;
+  font-weight: 400;
+  letter-spacing: 2px;
+}
+.home > .Brands > .heading > .HR {
+  border-bottom: 0.5px solid rgb(209, 204, 204);
+  width: 80%;
+}
+
+#carousel {
+  padding: 50px 10px;
+}
+
 @media screen and (orientation: portrait) {
   .home > .container > .OurService {
     display: flex;
